# b1-coding-practical-mt24

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: mission.csv
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
notebooks/: demo.ipynb  tests.ipynb
report/: report.aux  report.fdb_latexmk  report.fls  report.tex
test/: tests.ipynb
uuv_mission/: __init__.py  control.py  controller.py  controllerPD.py  demo.ipynb  dynamic.py  new_controller.py  new_demo.py  terrain.py  test.py
