[tool.poetry]
name = "b1-coding-practical-mt"
version = "0.1.0"
description = "For Oxford B1 Engineering Computation Module"
authors = ["fuwentay <fuwentay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "3.9.2"
numpy = "2.1.1"
pandas = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
